--- a/Kustobsar.Ap2.Api/packages.config
+++ b/Kustobsar.Ap2.Api/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Artportalen" version="0.1.64.0" targetFramework="net45" />
+  <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.NLog32" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
   <package id="SafeMapper" version="1.1.89.0" targetFramework="net45" />
   <package id="SwedishCoordinates" version="0.1.6.0" targetFramework="net45" />
 </packages>
