updated nlog trace target

--- a/Kustobsar.Ap2.Api/NLog.config
+++ b/Kustobsar.Ap2.Api/NLog.config
@@ -12,13 +12,11 @@
             concurrentWrites="true"
             keepFileOpen="false"
             encoding="iso-8859-2" />
-    </targets>
-
-    <targets>
-        <target xsi:type="Trace" name="String" layout="Layout" />
+        <target name="trace" xsi:type="Trace" layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
     </targets>
 
     <rules>
-        <logger name="*" minlevel="Info" writeTo="file" />
+      <logger name="*" minlevel="Trace" writeTo="trace" />
+      <logger name="*" minlevel="Info" writeTo="file" />
     </rules>
 </nlog>
