--- a/Kustobsar.Ap2.Api/Web.config
+++ b/Kustobsar.Ap2.Api/Web.config
@@ -9,7 +9,7 @@
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
   </configSections>
-  <appSettings configSource="appSettings.config" />
+  <appSettings file="appSettings.config" />
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
