--- a/Kustobsar.Ap2.Api/NLog.config
+++ b/Kustobsar.Ap2.Api/NLog.config
@@ -12,11 +12,11 @@
             concurrentWrites="true"
             keepFileOpen="false"
             encoding="iso-8859-2" />
-        <target name="trace" xsi:type="Trace" layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
+        <target name="AppHarborTraceSource" xsi:type="Trace" layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
     </targets>
 
     <rules>
-      <logger name="*" minlevel="Trace" writeTo="trace" />
+      <logger name="*" minlevel="Trace" writeTo="AppHarborTraceSource" />
       <logger name="*" minlevel="Info" writeTo="file" />
     </rules>
 </nlog>
