--- a/Kustobsar.Ap2.Api/Web.config
+++ b/Kustobsar.Ap2.Api/Web.config
@@ -30,6 +30,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off"/>
+    <trace enabled="true" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
