Splitted connectionstrings to seperate file

--- a/Kustobsar.Ap2.Api/Web.config
+++ b/Kustobsar.Ap2.Api/Web.config
@@ -80,7 +80,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="SqlDbConnection" connectionString="Server=.\SQLEXPRESS;Database=Artportalen;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config" />
 </configuration>
