--- a/Kustobsar.Ap2.Api/Kustobsar.Ap2.Api.csproj
+++ b/Kustobsar.Ap2.Api/Kustobsar.Ap2.Api.csproj
@@ -137,8 +137,12 @@
     </Content>
     <Content Include="NLog.config" />
     <Content Include="appSettings.config" />
+    <Content Include="connectionStrings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
