--- a/Kustobsar.Ap2.Api/NLog.config
+++ b/Kustobsar.Ap2.Api/NLog.config
@@ -13,9 +13,11 @@
             keepFileOpen="false"
             encoding="iso-8859-2" />
         <target name="AppHarborTraceSource" xsi:type="Trace" layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
+        <target name="console" xsi:type="Console"  layout="${longdate} ${callsite} ${level} ${message}"/>
     </targets>
 
     <rules>
+      <logger name="*" minlevel="Info" writeTo="console" />
       <logger name="*" minlevel="Trace" writeTo="AppHarborTraceSource" />
       <logger name="*" minlevel="Info" writeTo="file" />
     </rules>
