--- a/Kustobsar.Ap2.Api/NLog.config
+++ b/Kustobsar.Ap2.Api/NLog.config
@@ -2,8 +2,10 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-    <targets>
-        <target name="file" xsi:type="File"
+
+  <targets>
+    <target name="logentries" type="Logentries" debug="true" layout="${date:format=ddd MMM dd} ${time:format=HH:mm:ss} ${date:format=zzz yyyy} ${logger} : ${LEVEL}, ${message}" />
+    <target name="file" xsi:type="File"
             layout="${longdate} ${logger} ${message}" 
             fileName="${basedir}/App_Data/logs/logfile.txt" 
             archiveFileName="${basedir}/App_Data/logs/archives/log.{#####}.txt"
@@ -17,6 +19,7 @@
     </targets>
 
     <rules>
+      <logger name="*" minLevel="Debug" appendTo="logentries" />
       <logger name="*" minlevel="Info" writeTo="console" />
       <logger name="*" minlevel="Trace" writeTo="AppHarborTraceSource" />
       <logger name="*" minlevel="Info" writeTo="file" />
