--- a/Kustobsar.Ap2.Api/appSettings.config
+++ b/Kustobsar.Ap2.Api/appSettings.config
@@ -5,5 +5,8 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="aspnet:MaxJsonDeserializerMembers" value="1500000" />
   <add key="SightingsStoredDays" value="7" />
+  <add key="LOGENTRIES_TOKEN" value="891c85e4-b154-44b4-962b-08b4b8d5d310" />
+  <add key="LOGENTRIES_ACCOUNT_KEY" value="" />
+  <add key="LOGENTRIES_LOCATION" value="" />
 </appSettings>
 
