--- a/Kustobsar.Ap2.Api/packages.config
+++ b/Kustobsar.Ap2.Api/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="Parse" version="1.6.1" targetFramework="net45" />
   <package id="SafeMapper" version="1.1.89.0" targetFramework="net45" />
   <package id="SwedishCoordinates" version="0.1.6.0" targetFramework="net45" />
 </packages>
