--- a/Kustobsar.Ap2.Data/packages.config
+++ b/Kustobsar.Ap2.Data/packages.config
@@ -6,7 +6,11 @@
   <package id="Common.Logging.NLog32" version="3.1.0" targetFramework="net45" />
   <package id="FluentNHibernate" version="2.0.1.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NHibernate" version="4.0.3.4000" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="parse" version="1.6.1" targetFramework="net45" />
   <package id="SafeMapper" version="1.1.89.0" targetFramework="net45" />
+  <package id="SwedishCoordinates" version="0.1.6.0" targetFramework="net45" />
+  <package id="System.IO.Abstractions" version="2.0.0.118" targetFramework="net45" />
 </packages>
