--- a/Kustobsar.Ap2.Api.Tests/packages.config
+++ b/Kustobsar.Ap2.Api.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Artportalen" version="0.3.77.0" targetFramework="net45" />
+  <package id="AngleSharp" version="0.9.3" targetFramework="net45" />
+  <package id="Artportalen" version="0.4.85.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="SwedishCoordinates" version="0.1.8.0" targetFramework="net45" />
+  <package id="SwedishCoordinates" version="0.1.10.0" targetFramework="net45" />
 </packages>
