--- a/Kustobsar.Ap2.Data/packages.config
+++ b/Kustobsar.Ap2.Data/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Artportalen" version="0.3.77.0" targetFramework="net45" />
+  <package id="AngleSharp" version="0.9.3" targetFramework="net45" />
+  <package id="Artportalen" version="0.4.85.0" targetFramework="net45" />
   <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging.NLog32" version="3.1.0" targetFramework="net45" />
@@ -11,6 +12,6 @@
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
   <package id="parse" version="1.6.1" targetFramework="net45" />
   <package id="SafeMapper" version="2.0.112" targetFramework="net45" />
-  <package id="SwedishCoordinates" version="0.1.8.0" targetFramework="net45" />
+  <package id="SwedishCoordinates" version="0.1.10.0" targetFramework="net45" />
   <package id="System.IO.Abstractions" version="2.0.0.118" targetFramework="net45" />
 </packages>
